[package]
name = "tree-sitter-ron"
description = "RON grammar for tree-sitter"
version = "0.1.0"
authors = ["Marius Cobzarenco", "Amaan Qureshi <amaanq12@gmail.com>"]
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "ron"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-ron"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
